<resources>
    <string name="Birtyday_can_not_Empty">Birthday Is Empty</string>
    <string name="My_vd">MYVIDEO</string>
    <string name="Real_new_text1">Strength</string>
    <string name="Real_new_text11">Forehand</string>
    <string name="Real_new_text111">Forehand</string>
    <string name="Real_new_text12">Backhand</string>
    <string name="Real_new_text122">Backhand</string>
    <string name="Real_new_text2">Speed</string>
    <string name="Real_new_text3">Radian</string>
    <string name="Real_type_text1">Serve</string>
    <string name="Real_type_text2">Smash</string>
    <string name="Real_type_text3">Volley</string>
    <string name="Real_type_text4">Slice</string>
    <string name="Real_type_text5">Topspin</string>
    <string name="Real_type_text6">Flat</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_url">http://appserv.coollang.com/WebJumpController/tennisHomePageEn</string>
    <string name="action_settings">Settings</string>
    <string name="active_time_unit">h/wk</string>
    <string name="activity_image_choose_finish_btn">Complete</string>
    <string name="activity_real">Live Mode</string>
    <string name="activity_real_k">Missed swings are not counted</string>
    <string name="activity_setting_left">Lefty</string>
    <string name="activity_setting_medal">Medal</string>
    <string name="activity_setting_right">Righty</string>
    <string name="activity_setting_text5_t">Confirm to clear the cache?</string>
    <string name="activity_setting_text9">Feedback</string>
    <string name="activity_setting_text9_t">send</string>
    <string name="activity_setting_text9_tl">Thank you for your suggestions ! We will review them and provide the necessary improvements in the next updates. Stay tuned!</string>
    <string name="activity_type1">Volley</string>
    <string name="add_archieve">Add Achievement</string>
    <string name="add_archieve_desc">Enter the competition and awards you have attended</string>
    <string name="all_sport_data">Total</string>
    <string name="angle">Radian</string>
    <string name="app_device">Coollang smart tennis sensor</string>
    <string name="app_explain">Smart Tennis provides professional sports monitoring and technical analysis for avid tennis players. To fully experience the product, you will need to connect this APP to a smart tennis device, which performs real-time monitoring on parameters like speed, spin balls, your shots and strength. It will then, based on these parameters, evaluate your stamina, skills, exercise strength and playing styles.</string>
    <string name="app_guidance">Guidance</string>
    <string name="app_history">History</string>
    <string name="app_name">智能网球</string>
    <string name="app_person">Me</string>
    <string name="app_rank">Ranking</string>
    <string name="app_sport">Statistics</string>
    <string name="app_train">Training</string>
    <string name="app_video">video</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archieve_desc">Achievement</string>
    <string name="archieve_desc_hint">The Competition and Awards</string>
    <string name="archieve_year">Year</string>
    <string name="average">Average</string>
    <string name="avergae_sport_detail">Avg</string>
    <string name="avg_score">Avg Score</string>
    <string name="avg_speed">Avg</string>
    <string name="back_hand">Backhand</string>
    <string name="back_hand_speed">Backhand swing speed</string>
    <string name="backup">Backups</string>
    <string name="ball_age_empty">Ball Age Is Empty</string>
    <string name="ball_age_format">%d years</string>
    <string name="ball_age_zero">Beginner</string>
    <string name="ball_speed_scatter">Shots Distribution</string>
    <string name="ball_star_teach">Video Teaching</string>
    <string name="bat_ball">Today</string>
    <string name="bat_times">Shots</string>
    <string name="ble_connect_fail">Connect failed. Please try again later</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="break_connect">Confirm to disconnected device?</string>
    <string name="buy_date">Purchase Date</string>
    <string name="buy_web">http://www.coollang-asia.com/</string>
    <string name="cal">kcal</string>
    <string name="calori">Burned</string>
    <string name="camera">Camera</string>
    <string name="can_not_delete_example_video">Can Not Delete Demo Video</string>
    <string name="cancel">Cancel</string>
    <string name="cancelAll">Deselect All</string>
    <string name="cannot_drawLine">Unable to compute due to short exercise time</string>
    <string name="cant_empty_data">Can`t set empty name</string>
    <string name="changci_circle_unit01">km/h</string>
    <string name="change_account">Change Account</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charging">Charging</string>
    <string name="charging_status">Charging</string>
    <string name="check_detail">View Details</string>
    <string name="check_history_timestemp">-/---/-</string>
    <string name="check_history_title01">Average Energy Consumption</string>
    <string name="check_history_title02">Average Shots</string>
    <string name="check_history_title03">Average Sports Hours</string>
    <string name="check_history_title04">Total Energy Consumption</string>
    <string name="check_history_title05">Total Shots</string>
    <string name="check_history_title06">Top Racket Swing Speed</string>
    <string name="click_to_update">Click to upgrade</string>
    <string name="comment1">Today,My result is</string>
    <string name="comment2">what about you? Press the QR code to beat me</string>
    <string name="confirm">confirm</string>
    <string name="connect_desc">Connect the sensor to your mobile phone by following these steps:</string>
    <string name="connect_device_use">Connected to mobile phone</string>
    <string name="connect_note">1. Turn on the sensor and activate the Bluetooth function on your mobile phone.\n2. Login on the “Smart Tennis” APP and click the sensor icon above. \n3. Select your sensor after it is detected by the APP and click Connect.</string>
    <string name="connect_phone">Connected to mobile phone</string>
    <string name="how_to_use">How To Use</string>
    <string name="indicator_status">Indicator Status</string>
    <string name="install_way">Installation</string>
    <string name="light_status">Indicator Status</string>
    <string name="light_status_01">Three indicators are flashing one by one (slowly)</string>
    <string name="light_status_02">Three indicators are flashing at the same time</string>
    <string name="light_status_03">One indicator is flashing</string>
    <string name="light_status_des_01">Powered on (disconnected)</string>
    <string name="light_status_desc_02">Connected</string>
    <string name="light_status_desc_03">Battery low (less than 15%)</string>
    <string name="normal_status">Normal</string>
    <string name="open_device">Power on</string>
    <string name="perfect_">*</string>
    <string name="perfect_save">Save</string>
    <string name="perfect_text10">Righty</string>
    <string name="perfect_text11">Please Choose</string>
    <string name="perfect_text4">Birthday</string>
    <string name="perfect_text4_day" />
    <string name="perfect_text4_month">-</string>
    <string name="perfect_text4_year">-</string>
    <string name="perfect_text5">Height</string>
    <string name="perfect_text6">Weight</string>
    <string name="perfect_text7">Training Years</string>
    <string name="perfect_text8">Handedness</string>
    <string name="perfect_text9">Lefty</string>
    <string name="power_off">Power off</string>
    <string name="reset_factory">Restore to Factory Settings</string>
    <string name="special_status">Special indicator</string>
    <string name="status_desc">The sensor features three indicators for device status:</string>
    <string name="status_desc_light">Description</string>
    <string name="update_device">Firmware Upgrade</string>
    <string name="use_fast_use">Use</string>
    <string name="view_data">View The Data</string>
</resources>