<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/fast_use_desc"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/indicator_status"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/fast_use_desc"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/status_desc"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/fast_use_title"
        android:id="@+id/tv_title_fast_use_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/normal_status"
        android:drawableLeft="@drawable/fast_use_arrow_down"
        android:drawablePadding="6dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp">
        <TableRow android:background="@color/fast_use_status_bg">
            <TextView
                android:textSize="12sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_title_bg"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:text="@string/light_status"
                android:layout_weight="1"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_title_bg"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:text="@string/status_desc_light"
                android:layout_weight="1.5"/>
        </TableRow>
        <TableRow android:baselineAligned="false">
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_01"
                android:layout_weight="1"/>
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_des_01"
                android:layout_weight="1.5"/>
        </TableRow>
        <TableRow android:baselineAligned="false">
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_02"
                android:layout_weight="1"/>
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_desc_02"
                android:layout_weight="1.5"/>
        </TableRow>
        <TableRow android:baselineAligned="false">
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_03"
                android:layout_weight="1"/>
            <TextView
                android:textSize="10sp"
                android:textColor="@color/fast_use_desc"
                android:gravity="center"
                android:background="@drawable/fast_use_status_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_status_height"
                android:text="@string/light_status_desc_03"
                android:layout_weight="1.5"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
