<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white_liu"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="11dp">
        <TextView
            android:textColor="@color/sport_text_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/perfect_"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/text_menu"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/perfect_text4"
            android:layout_weight="1"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/setBirthdayd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/year"
                android:visibility="gone"
                android:text="1990"
                style="@style/perfect_style"/>
            <TextView
                android:id="@+id/year_unit"
                android:text="@string/perfect_text4_year"
                style="@style/perfect_style1"/>
            <TextView
                android:id="@+id/month"
                android:visibility="gone"
                android:text="09"
                style="@style/perfect_style"/>
            <TextView
                android:id="@+id/month_unit"
                android:visibility="gone"
                android:text="@string/perfect_text4_month"
                style="@style/perfect_style1"/>
            <TextView
                android:id="@+id/day"
                android:visibility="gone"
                android:text="27"
                style="@style/perfect_style"/>
            <TextView
                android:id="@+id/day_unit"
                android:visibility="gone"
                android:text="@string/perfect_text4_day"
                style="@style/perfect_style1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout style="@style/perfect_style2">
        <TextView
            android:textColor="@color/sport_text_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/perfect_"/>
        <TextView
            android:text="@string/perfect_text5"
            style="@style/perfect_style3"/>
        <TextView
            android:id="@+id/setHeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/perfect_text11"
            android:layout_weight="2"
            style="@style/perfect_style1"/>
    </LinearLayout>
    <LinearLayout style="@style/perfect_style2">
        <TextView
            android:textColor="@color/sport_text_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/perfect_"/>
        <TextView
            android:text="@string/perfect_text6"
            style="@style/perfect_style3"/>
        <TextView
            android:id="@+id/setWeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/perfect_text11"
            android:layout_weight="2"
            style="@style/perfect_style1"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        style="@style/perfect_style2">
        <TextView
            android:textColor="@color/sport_text_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/perfect_"/>
        <TextView
            android:text="@string/perfect_text7"
            style="@style/perfect_style3"/>
        <TextView
            android:id="@+id/setYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/perfect_text11"
            android:layout_weight="2"
            style="@style/perfect_style1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white_liu"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="11dp">
        <TextView
            android:textSize="13sp"
            android:textColor="@color/text_menu"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/perfect_text8"
            android:layout_weight="1"/>
        <RadioGroup
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/rg_hand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <RadioButton
                android:textSize="13sp"
                android:textColor="@color/white_menu_bg"
                android:gravity="center"
                android:id="@+id/lefthand"
                android:background="@drawable/radio_bg"
                android:layout_width="67dp"
                android:layout_height="23dp"
                android:button="@null"
                android:text="@string/perfect_text9"/>
            <RadioButton
                android:textSize="13sp"
                android:gravity="center"
                android:id="@+id/righthand"
                android:background="@drawable/radio_bg"
                android:layout_width="67dp"
                android:layout_height="23dp"
                android:layout_marginLeft="45dp"
                android:checked="true"
                android:button="@null"
                android:text="@string/perfect_text10"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:textColor="@color/white_menu_bg"
        android:gravity="center"
        android:id="@+id/save"
        android:background="@drawable/selector_base_btn"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="11dp"
        android:text="@string/perfect_save"/>
</LinearLayout>
