<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:baseLineView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_real_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/history_title"
        layout="@layout/navigation_relativelayout"/>
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_install"
                android:layout_marginTop="8dp"
                android:text="@string/install_way"
                style="@style/fast_use_item_title"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_install"
                baseLineView:leftText="@string/install_way"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <TextView
                android:id="@+id/tv_use"
                android:text="@string/how_to_use"
                style="@style/fast_use_item_title"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_open"
                baseLineView:leftText="@string/open_device"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_connect"
                baseLineView:leftText="@string/connect_device_use"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:id="@+id/line_connect"
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_use"
                baseLineView:leftText="@string/use_fast_use"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_close"
                baseLineView:leftText="@string/power_off"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_check_data"
                baseLineView:leftText="@string/view_data"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_update"
                baseLineView:leftText="@string/update_device"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_reset_factory"
                baseLineView:leftText="@string/reset_factory"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <TextView
                android:id="@+id/tv_status"
                android:text="@string/indicator_status"
                style="@style/fast_use_item_title"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_status"
                baseLineView:leftText="@string/normal_status"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_power"
                baseLineView:leftText="@string/charging_status"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <com.coollang.tennis.widget.BaseLineView
                android:id="@+id/blv_speciall"
                baseLineView:leftText="@string/special_status"
                baseLineView:leftTextColor="@color/text_menu"
                baseLineView:rightDrawable="@drawable/ic_person_setting_arrow"
                style="@style/baseLineViewStyle"/>
            <View
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <View
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
