<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/fast_use_desc"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/how_to_use"/>
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/fast_use_connect"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/fast_use_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="62dp"
        android:text="@string/connect_phone"
        android:drawableLeft="@drawable/img_fast_use_arrow"
        android:drawablePadding="6dp"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/fast_use_desc"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connect_desc"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/fast_use_desc"
        android:id="@+id/tv_use_step"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connect_note"
        android:lineSpacingExtra="9dp"
        android:lineSpacingMultiplier="0.5"/>
</LinearLayout>
